# ModernDashboard

./: pyproject.toml
docs/: LICENSE  README.md
scripts/: Management.py  ModernDashboard.py
tests/: __init__.py  test_moderndashboard.py
