[tool.poetry]
name = "ModernDashboard"
version = "0.1.0"
description = ""
authors = ["shervin-glitch <shervin2234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tk = ""
sv_ttk = ""
tkxui = ""
customtkinter = ""
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
